--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "apollo-link-context": "^1.0.20",
+    "formik": "^2.2.9",
+    "graphql": "^16.6.0",
     "next": "13.0.2",
+    "node-fetch": "^2.6.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-select": "^5.6.1",
+    "recharts": "^2.1.16",
+    "sweetalert2": "^11.6.9",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "8.27.0",
-    "eslint-config-next": "13.0.2"
+    "eslint-config-next": "13.0.2",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.3"
   }
 }
